# embodied-ai-news

./: .env.example  .gitignore  CLAUDE.MD  PLAN.md  pyproject.toml  requirements.txt  run.py  test_sources.py
docs/: sources_todo.md  system_overview.html  system_overview.md
eai_news/: __init__.py  models.py  scheduler.py
eai_news/collectors/: __init__.py  base.py  galbot_collector.py  jiqizhixin_collector.py  playwright_crawler.py  rss_collector.py  twitter_collector.py  web_crawler.py  weibo_collector.py  youtube_collector.py
eai_news/config/: filters.yaml  settings.py  sources.yaml
eai_news/db/: schema.sql
eai_news/filters/: categorizer.py  deduplicator.py  pipeline.py  relevance_scorer.py
eai_news/processors/: llm_processor.py
eai_news/storage/: __init__.py  database.py  excel_fallback.py  feishu_table.py
